新增日志特性和操作日志记录表

--- a/webApi/webApi.csproj
+++ b/webApi/webApi.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\adminModule\adminModule.csproj" />
     <ProjectReference Include="..\domain\domain.csproj" />
     <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
+    <ProjectReference Include="..\quartzModeule\quartzModeule.csproj" />
   </ItemGroup>
 
 </Project>
