新增操作日志功能

--- a/domain/domain.csproj
+++ b/domain/domain.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.167" />
+  </ItemGroup>
+
 
 
 </Project>
