新增第三方系统接入功能

--- a/infrastructure/infrastructure.csproj
+++ b/infrastructure/infrastructure.csproj
@@ -29,7 +29,7 @@
 
 
 	<ItemGroup>
-	  <None Update="log4Net.config">
+	  <None Update="log4net.config">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
